Updated gitignore for intelliJ & Changed 404 page content

--- a/content/404.md
+++ b/content/404.md
@@ -1,6 +1,13 @@
 ---
-title: "No Search Found"
+title: "404"
 description: "This is meta description"
 layout: "404"
 draft: false
 ---
+
+<div style="text-align: center">
+<p>Unfortunately, the page or article you're looking for could not be found.
+If you think this is a mistake, please contact me on <a href="mailto:daniel@storiesofadev.com">daniel@storiesofadev.com</a></p>
+<p>Best regards,</p>
+<img src="/assets/signature.png" width="150" alt="">
+</div>
